; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/ncsw/Peripherals/FM/extr_fman_ncsw.c_fman_get_fpm_err_event.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/ncsw/Peripherals/FM/extr_fman_ncsw.c_fman_get_fpm_err_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fman_fpm_regs = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fman_get_fpm_err_event(%struct.fman_fpm_regs* %0) #0 {
  %2 = alloca %struct.fman_fpm_regs*, align 8
  %3 = alloca i32, align 4
  store %struct.fman_fpm_regs* %0, %struct.fman_fpm_regs** %2, align 8
  %4 = load %struct.fman_fpm_regs*, %struct.fman_fpm_regs** %2, align 8
  %5 = getelementptr inbounds %struct.fman_fpm_regs, %struct.fman_fpm_regs* %4, i32 0, i32 0
  %6 = call i32 @ioread32be(i32* %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load %struct.fman_fpm_regs*, %struct.fman_fpm_regs** %2, align 8
  %9 = getelementptr inbounds %struct.fman_fpm_regs, %struct.fman_fpm_regs* %8, i32 0, i32 0
  %10 = call i32 @iowrite32be(i32 %7, i32* %9)
  %11 = load i32, i32* %3, align 4
  ret i32 %11
}

declare dso_local i32 @ioread32be(i32*) #1

declare dso_local i32 @iowrite32be(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
